# async-task

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  master  merged-with-shared-schedule  no-box  polymorphization  polymorphization-shared-schedule
.github/workflows/: build-and-test.yaml  ci.yml
benches/: spawn.rs  waker_fn.rs
examples/: block.rs  panic-propagation.rs  panic-result.rs  spawn-local.rs  spawn-on-thread.rs  spawn.rs  task-id.rs  with-metadata.rs
src/: alloc_api.rs  header.rs  intrusive.rs  join_handle.rs  lib.rs  raw.rs  runnable.rs  scope.rs  state.rs  task.rs  task_local.rs  utils.rs
tests/: basic.rs  cancel.rs  custom_allocator.rs  is_cancelled.rs  join.rs  metadata.rs  panic.rs  pending.rs  ready.rs  scope.rs  waker_panic.rs  waker_pending.rs  waker_ready.rs
