[package]
name = "async-task"
version = "4.0.3"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/stjepang/async-task"
homepage = "https://github.com/stjepang/async-task"
documentation = "https://docs.rs/async-task"
description = "Task abstraction for building executors"
keywords = ["futures", "task", "executor", "spawn"]
categories = ["asynchronous", "concurrency", "no-std"]
readme = "README.md"

[features]
default = ["std"]
std = []

[dev-dependencies]
atomic-waker = "1.0.0"
easy-parallel = "3.1.0"
flume = { version = "0.9.0", default-features = false }
once_cell = "1.4.1"
smol = "1.0.1"
