[package]
name = "async-task"
version = "4.0.3"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smol-rs/async-task"
homepage = "https://github.com/smol-rs/async-task"
documentation = "https://docs.rs/async-task"
description = "Task abstraction for building executors"
keywords = ["futures", "task", "executor", "spawn"]
categories = ["asynchronous", "concurrency", "no-std"]

[features]
default = ["std"]
std = []

[dev-dependencies]
atomic-waker = "1.0.0"
easy-parallel = "3.1.0"
flume = { version = "0.10", default-features = false }
once_cell = "1.4.1"
smol = "1.0.1"
